# CPP_Playground

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt_new  CMakePresets.json  CMakePresets.json_new  Config.cmake.in  Dockerfile  Dockerfile_Alpine  README.md  main.cpp
.github/workflows/: CI.yml  CI_bak.yml
benchmarks/: CMakeLists.txt  CMakePresets.json  benchmark.sh  benchmarks.hpp  benchmarks.json  common.py  main.cpp  plot_results.py  profile.sh
benchmarks/include/: ET_VS_RG.hpp  STL_VS_CST.hpp  benchmarks.hpp
benchmarks/python/: common.py  plot_results.py
benchmarks/results/: benchmarks.json
benchmarks/scripts/: benchmark.sh  profile.sh
cmake/: CodeCoverage.cmake  cheat_sheet.txt  import_dependencies.cmake  run_export.cmake  run_install.cmake  run_packing.cmake
doc/: CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile-mcss  conf.py
doc/pages/: about.dox
etc/: environment.yml
include/: CMakeLists.txt  stdafx.hpp
include/Common/: HelperFunctions.hpp
include/LinAlg/: CMakeLists.txt  LinAlg.hpp  LinAlg.mpp  Math.cpp  Math.hpp  Matrices.hpp  Matrix.cpp  Matrix.hpp  Solvers.hpp
include/LinAlg/Matrices/: Base.hpp  Expressions.hpp  ForwardDeclarations.hpp  HelperFunctions.hpp  HelperMatrices.hpp  Matrix.hpp  MatrixMultiplication.hpp
include/LinAlg/Matrix/: Base.hpp  CMakeLists.txt  Cont.hpp  Cont.mpp  Derived.hpp  ForwardDeclarations.hpp  Matrix.hpp  Matrix.mpp  MatrixBase.mpp  Operations.hpp
include/LinAlg/Solvers/: LU.hpp
include/Matrices/CR/: CR.hpp  Concepts.hpp  Coroutine.hpp  ForwardDeclarations.hpp  Matrix.hpp  MatrixCoroutine.hpp
include/Matrices/Common/: Base.hpp  ForwardDeclarations.hpp  HelperFunctions.hpp  HelperMatrices.hpp  Matrix.hpp  MatrixMultiplication.hpp
include/Matrices/ET/: Base.hpp  Concepts.hpp  ET.hpp  ET_CRTP.hpp  Expressions.hpp  ForwardDeclarations.hpp  HelperMatrices.hpp  Matrix.hpp  MatrixMultiplication.hpp
include/Matrices/ET_CRTP/: Base.hpp  ET_CRTP.hpp  Expressions.hpp  ForwardDeclarations.hpp  HelperMatrices.hpp  Matrix.hpp  MatrixMultiplication.hpp
include/Matrices/ETdf/: Matrix.hpp
include/Matrices/RG/: Concepts.hpp  Container.hpp  Expressions.hpp  ForwardDeclarations.hpp  HelperMatrices.hpp  ImplementationDetails.hpp  Iterator.hpp  Matrix.hpp  MatrixMultiplication.hpp  MatrixView.hpp  RG.hpp
include/Solvers/: LU.hpp  Solvers.hpp
libLA/: CMakeLists.txt  LA.h  Matrix.cpp  Matrix.h
standalone/: CMakeLists.txt  CMakePresets.json  main.cpp
tests/: CMakeLists.txt  CMakeLists.txt_new  CMakePresets.json  CTestConfig.cmake
tests/doctest/: Array2D.cpp  CMakeLists.txt  Expressions.cpp  HelperMatrices.cpp  Matrix.cpp  Operations.cpp  Solvers.cpp  backends.hpp  main.cpp  matrix.cpp  multiply.cpp
tests/doctest/Common/: Expressions.cpp  HelperMatrices.cpp  Matrix.cpp  Solvers.cpp
tests/doctest/Tests/: BEMatrix.cpp  CommonMatrix.cpp  Expressions.cpp  HelperMatrices.cpp  Matrix.cpp  OtherMatrix.cpp  RGMatrix.cpp
tests/doctest/Tests/Common/: Expressions.cpp  Matrix.cpp
tests/gtest/: CMakeLists.txt  CMakeLists_old.txt  matrix.cpp  multiply.cpp
tests/unit/: CMakeLists.txt  CMakeLists_old.txt  compilation.cpp  matrix_size.cpp
